compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case__case_building_matched_value_alias_3.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case.rs
assertion_line: 609
expression: "\nimport gleam\n\npub fn go(x) {\n   case x {\n     Ok(1 as a) -> Ok(a)\n     Ok(_) -> Ok(2)\n     Error(Nil) -> Error(Nil)\n   }\n}"
snapshot_kind: text
---
----- SOURCE CODE

import gleam

pub fn go(x) {
   case x {
     Ok(1 as a) -> Ok(a)
     Ok(_) -> Ok(2)
     Error(Nil) -> Error(Nil)
   }
}

----- COMPILED JAVASCRIPT
import * as $gleam from "../gleam.mjs";
import { Ok } from "../gleam.mjs";

export function go(x) {
  if (x instanceof Ok) {
    let $ = x[0];
    if ($ === 1) {
      return x;
    } else {
      return new Ok(2);
    }
  } else {
    return x;
  }
}
