compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case__case_building_matched_value_wrapped_in_block.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case.rs
assertion_line: 563
expression: "\nimport gleam\n\npub fn go(x) {\n   case x {\n     1 -> { 1 }\n     _ -> 2\n   }\n}"
snapshot_kind: text
---
----- SOURCE CODE

import gleam

pub fn go(x) {
   case x {
     1 -> { 1 }
     _ -> 2
   }
}

----- COMPILED JAVASCRIPT
import * as $gleam from "../gleam.mjs";

export function go(x) {
  if (x === 1) {
    return x;
  } else {
    return 2;
  }
}
