compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case__case_building_record_with_select_matched_by_pattern_3.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case.rs
assertion_line: 518
expression: "\nimport gleam\n\npub fn go(x) {\n   case x {\n     gleam.Ok(1) -> Ok(1)\n     _ -> Error(Nil)\n   }\n}"
snapshot_kind: text
---
----- SOURCE CODE

import gleam

pub fn go(x) {
   case x {
     gleam.Ok(1) -> Ok(1)
     _ -> Error(Nil)
   }
}

----- COMPILED JAVASCRIPT
import * as $gleam from "../gleam.mjs";
import { Error } from "../gleam.mjs";

export function go(x) {
  if (x instanceof $gleam.Ok) {
    let $ = x[0];
    if ($ === 1) {
      return x;
    } else {
      return new Error(undefined);
    }
  } else {
    return new Error(undefined);
  }
}
